[package]
name = "w3b-abi"
version = "0.1.0"
description = "Web3 ABI encoding in Rust."
authors = ["Sky Mavis Engineering <engineering@skymavis.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/skymavis/w3b"
repository = "https://github.com/skymavis/w3b"
categories = ["encoding"]
keywords = ["web3", "abi", "encoding", "ethereum"]
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "skymavis/w3b", branch = "master" }
coveralls = { repository = "skymavis/w3b", branch = "master" }
is-it-maintained-issue-resolution = { repository = "skymavis/w3b" }
is-it-maintained-open-issues = { repository = "skymavis/w3b" }
maintenance = { status = "actively-developed" }

[dependencies]
w3b-types-abi = { path = "../w3b-types-abi"}
