[package]
name = "w3b-types-abi"
version = "0.1.0"
description = "Web3 ABI types in Rust."
authors = ["Sky Mavis Engineering <engineering@skymavis.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/skymavis/w3b"
repository = "https://github.com/skymavis/w3b"
categories = ["data-structures"]
keywords = ["web3", "api", "ethereum"]
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "skymavis/w3b", branch = "master" }
coveralls = { repository = "skymavis/w3b", branch = "master" }
is-it-maintained-issue-resolution = { repository = "skymavis/w3b" }
is-it-maintained-open-issues = { repository = "skymavis/w3b" }
maintenance = { status = "actively-developed" }

[lib]
name = "w3b_types_abi"
path = "src/lib.rs"

[[bin]]
name = "bytes_impls"
path = "bin/bytes_impls.rs"

[[bin]]
name = "numeric_impls"
path = "bin/numeric_impls.rs"

[build-dependencies]
autocfg = "0.1.7"

[dependencies]
w3b-types-core = { path = "../w3b-types-core" }
