[package]
name = "w3b"
version = "0.1.0"
description = "Web3 API in Rust."
authors = ["Sky Mavis Engineering <engineering@skymavis.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/skymavis/w3b"
repository = "https://github.com/skymavis/w3b"
categories = ["api-bindings"]
keywords = ["web3", "api", "ethereum"]
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "skymavis/w3b", branch = "master" }
coveralls = { repository = "skymavis/w3b", branch = "master" }
is-it-maintained-issue-resolution = { repository = "skymavis/w3b" }
is-it-maintained-open-issues = { repository = "skymavis/w3b" }
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = { version = "0.10.1", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
tokio = { version = "0.2.9", features = ["macros"] }
