[package]
name = "web3r"
version = "0.1.0"
description = "Web3 API in Rust."
authors = ["Sky Mavis Engineering <engineering@skymavis.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/skymavis/web3r"
repository = "https://github.com/skymavis/web3r"
categories = ["api-bindings"]
keywords = ["web3", "api", "ethereum"]
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "skymavis/web3r", branch = "master" }
coveralls = { repository = "skymavis/web3r", branch = "master" }
is-it-maintained-issue-resolution = { repository = "skymavis/web3r" }
is-it-maintained-open-issues = { repository = "skymavis/web3r" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
